fix: enable dark mode only

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,20 @@
+:root {
+    color-scheme: dark;
+    --bg: #212121;
+    --accent-bg: #2b2b2b;
+    --text: #dcdcdc;
+    --text-light: #ababab;
+    --accent: #ffb300;
+    --accent-hover: #ffe099;
+    --accent-text: var(--bg);
+    --code: #f06292;
+    --preformatted: #ccc;
+    --disabled: #111;
+}
+
 .skills-icon {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr  ;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
 }
@@ -8,7 +22,6 @@
 #skills-icon-git {
     max-width: 50%;
 }
-
 
 .contact-container {
     display: flex;
